--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "cmdk": "^0.2.0",
     "date-fns": "^3.1.0",
     "dayjs": "^1.11.10",
+    "formik": "^2.4.5",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.307.0",
@@ -45,6 +46,7 @@
     "styled-components": "^6.1.6",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
+    "yup": "^1.3.3",
     "zod": "^3.22.4",
     "zustand": "^4.4.7"
   },
