--- a/.env
+++ b/.env
@@ -4,9 +4,9 @@ NX_DAEMON=""
 POSTGRES_DATABASE="verceldb"
 POSTGRES_HOST="ep-shrill-queen-37465289-pooler.us-east-1.postgres.vercel-storage.com"
 POSTGRES_PASSWORD="Dzx2BjNXMw3S"
-POSTGRES_PRISMA_URL="postgres://default:Dzx2BjNXMw3S@ep-shrill-queen-37465289-pooler.us-east-1.postgres.vercel-storage.com/verceldb?pgbouncer=true&connect_timeout=15"
-POSTGRES_URL="postgres://default:Dzx2BjNXMw3S@ep-shrill-queen-37465289-pooler.us-east-1.postgres.vercel-storage.com/verceldb"
-POSTGRES_URL_NON_POOLING="postgres://default:Dzx2BjNXMw3S@ep-shrill-queen-37465289.us-east-1.postgres.vercel-storage.com/verceldb"
+POSTGRES_PRISMA_URL="postgres://postgres:200875@localhost:5432/penakertas?pgbouncer=true&connect_timeout=15"
+POSTGRES_URL="postgres://postgres:200875@localhost:5432/penakertas"
+POSTGRES_URL_NON_POOLING="postgres://postgres:200875@localhost:5432/penakertas"
 POSTGRES_USER="default"
 TURBO_REMOTE_ONLY=""
 TURBO_RUN_SUMMARY=""
