--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "rm -rf .next && next dev",
-    "build": "rm -rf .next && prisma generate && next build",
+    "build": "rm -rf .next && prisma generate && prisma db push --force-reset && next build",
     "start": "next start",
     "lint": "next lint"
   },
