--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "rm -rf .next && next dev",
-    "build": "rm -rf .next && next build",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -39,7 +39,6 @@
     "react-dom": "^18",
     "react-icons": "^4.12.0",
     "sass": "^1.69.7",
-    "sharp": "^0.33.2",
     "sonner": "^1.3.1",
     "styled-components": "^6.1.6",
     "tailwind-merge": "^2.2.0",
