--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "cmdk": "^0.2.0",
     "date-fns": "^3.1.0",
     "dayjs": "^1.11.10",
+    "file-loader": "^6.2.0",
     "formik": "^2.4.5",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.307.0",
