--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@cyntler/react-doc-viewer": "^1.14.1",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.15.3",
+    "@mui/lab": "^5.0.0-alpha.163",
+    "@mui/material": "^5.15.7",
     "@mui/styled-engine-sc": "^6.0.0-alpha.11",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.0.4",
