--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "rm -rf .next && next dev --turbo",
+    "dev-nt": "rm -rf .next && next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -32,16 +33,17 @@
     "cmdk": "^0.2.0",
     "date-fns": "^3.1.0",
     "dayjs": "^1.11.10",
+    "eslint-config-next": "^14.1.0",
     "file-loader": "^6.2.0",
     "formik": "^2.4.5",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.307.0",
-    "next": "14.0.4",
-    "next-auth": "^5.0.0-beta.4",
+    "next": "^14.1.0",
+    "next-auth": "^5.0.0-beta.5",
     "next-themes": "^0.2.1",
-    "react": "^18",
+    "react": "^18.2.0",
     "react-day-picker": "^8.10.0",
-    "react-dom": "^18",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "sass": "^1.69.7",
     "sonner": "^1.3.1",
