feat: full feature

--- a/.env
+++ b/.env
@@ -18,4 +18,4 @@ VERCEL_GIT_REPO_ID=""
 VERCEL_GIT_REPO_OWNER=""
 VERCEL_GIT_REPO_SLUG=""
 VERCEL_URL=""
-NEXT_PUBLIC_API_BASE_URL="http://localhost:52000"
+NEXT_PUBLIC_API_BASE_URL="https://relaxed-caiman-strongly.ngrok-free.app"
